workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
12:52:46 **** Rebuild of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
13:00:21 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
13:00:49 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
13:01:49 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
13:03:00 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
Info: Nothing to build for HellWorldcpp
Info: Nothing to build for HellWorldcpp
13:03:47 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
..\src\HellWorldcpp.cpp: In function 'int main()':
..\src\HellWorldcpp.cpp:18:12: error: 'sleep' was not declared in this scope
  sleep(1000);
            ^
13:05:42 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
..\src\HellWorldcpp.cpp: In function 'int main()':
..\src\HellWorldcpp.cpp:19:12: error: 'sleep' was not declared in this scope
  sleep(1000);
            ^
13:06:25 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
13:06:39 **** Incremental Build of configuration Debug for project HellWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HellWorldcpp.o" "..\\src\\HellWorldcpp.cpp" 
g++ -o HellWorldcpp.exe "src\\HellWorldcpp.o" 
13:08:43 **** Rebuild of configuration Debug for project HelloWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorldcpp.o" "..\\src\\HelloWorldcpp.cpp" 
g++ -o HelloWorldcpp.exe "src\\HelloWorldcpp.o" 
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
13:14:02 **** Incremental Build of configuration Debug for project HelloWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorldcpp.o" "..\\src\\HelloWorldcpp.cpp" 
g++ -o HelloWorldcpp.exe "src\\HelloWorldcpp.o" 
13:14:26 **** Incremental Build of configuration Debug for project HelloWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorldcpp.o" "..\\src\\HelloWorldcpp.cpp" 
g++ -o HelloWorldcpp.exe "src\\HelloWorldcpp.o" 
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
15:00:02 **** Clean-only build of configuration Debug for project HelloWorldcpp ****
rm -rf HelloWorldcpp.exe src/HelloWorldcpp.o src/HelloWorldcpp.d 
Cannot run program "rm": Launching failed

Error: Program "rm" not found in PATH
PATH=[C:\MinGW\bin;\bin;C:\Program Files (x86)\Dev-Cpp\MinGW64\x86_64-w64-mingw32\ImageMagick-6.8.5-Q16;C:\Program Files (x86)\Dev-Cpp\MinGW64\include\gdb\ImageMagick-6.8.5-Q16;C:\Program Files\ImageMagick-6.8.5-Q16;C:\Program Files (x86)\Intel\iCLS Client\;C:\Program Files\Intel\iCLS Client\;C:\windows\system32;C:\windows;C:\windows\System32\Wbem;C:\windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x86;C:\Program Files (x86)\Intel\OpenCL SDK\2.0\bin\x64;C:\Program Files\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\DAL;C:\Program Files (x86)\Intel\Intel(R) Management Engine Components\IPT;C:\Program Files (x86)\MATLAB\R2012a Student\bin;C:\Users\rtack_000\AppData\Local\Smartbar\Application\;C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;C:\Users\rtack_000\AppData\Local\Smartbar\Application\;C:\Program Files\Intel\WiFi\bin\;C:\Program Files\Common Files\Intel\WirelessCommon\;C:\Program Files (x86)\CMake 2.8\bin]

15:00:05 **** Clean-only build of configuration Debug for project HelloWorldcpp ****
15:03:29 **** Rebuild of configuration Debug for project HelloWorldcpp ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\HelloWorldcpp.o" "..\\src\\HelloWorldcpp.cpp" 
g++ -o HelloWorldcpp.exe "src\\HelloWorldcpp.o" 
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
Info: Nothing to build for HelloWorldcpp
